# k8s-service-discovery-in-prometheus

./: README.md  cluster-role.yaml  prometheus-config-map.yaml  prometheus-deployment.yaml
app/: Dockerfile  pyproject.toml
app/app/: server.py
manifests/: app-deployment.yaml  app-service.yaml  cluster-role-binding.yaml  prometheus-service.yaml
