[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rohithreddykota <rohithreddykota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
